break word in pre

--- a/website/index.html
+++ b/website/index.html
@@ -59,6 +59,7 @@
         border: 1px solid grey;
         padding: 1em;
         white-space: pre-wrap;
+        word-wrap: break-word;
       }
       summary {
         cursor: pointer;
