autofocus input url

--- a/website/index.html
+++ b/website/index.html
@@ -85,7 +85,7 @@
           <div>
             <label for="url">URL of server to audit:</label>
             <br />
-            <input id="url" type="url" name="url" required />
+            <input id="url" type="url" name="url" required autofocus />
             <br />
             <small
               >Please make sure that CORS allows this origin on your
