improve footer contents

--- a/website/index.html
+++ b/website/index.html
@@ -145,9 +145,13 @@
             >GraphQL over HTTP spec</a
           >
           |
-          <a href="https://github.com/graphql/graphql-http"
-            >graphql-http on GitHub</a
+          <a href="https://bundlephobia.com/package/graphql-http"
+            >Bundlephobia (package size)</a
           >
+          |
+          <a href="https://github.com/graphql/graphql-http">GitHub</a>
+          |
+          <a href="https://www.npmjs.com/package/graphql-http">npm</a>
         </small>
       </footer>
     </main>
