emphasis on offline

--- a/website/index.html
+++ b/website/index.html
@@ -132,8 +132,8 @@
 
       <p style="text-align: center">
         <small class="tip"
-          ><b>💡 Tip:</b> Save this website and use it as a portable compliance
-          checker.</small
+          ><b>💡 Tip:</b> Save this website and use it as a portable offline
+          compliance checker.</small
         >
       </p>
 
