chore(website): website is a compliance checker

--- a/website/index.html
+++ b/website/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <title>graphql-http</title>
+    <title>graphql-http | GraphQL over HTTP spec compliance checker</title>
     <meta
       name="description"
-      content="Simple, pluggable, zero-dependency, GraphQL over HTTP spec compliant server, client and audit suite."
+      content="Check any server for GraphQL over HTTP spec compliance with ease."
     />
 
     <style>
